--- a/main.css
+++ b/main.css
@@ -6,36 +6,65 @@ body {
     height: 100vh;
     margin:0;
     font-family: "Sofia", sans-serif;
-    background-color: rgb(189, 203, 235);
+    background-color: rgb(150, 140, 114);
 }
 
+h1{
+    color:rgb(198, 230, 205);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 
-#row {
-    border:2px solid black;
+.row:hover{
+    filter: brightness(1);
+}
+
+.row {
     height:30px;
     width:30px;
     padding: 5px;
 }
 
 #container {
+    margin: 10px;
+    border-radius: 5px;
     display:flex;
     flex-basis: 100px;
     flex-wrap:wrap;
-    width: 480px;
-    border:1px solid black;
+    width:480px;
+    border:2px solid black;
 }
 
 #container div {
+    background-color: rgb(220, 223, 227);
+    flex: 0 0 calc(100%/ var(--grid-size));
+    padding-bottom:calc(100% / var(--grid-size)) ;
     box-sizing: border-box;
     border: 1px solid black; 
-    height: 30px; 
-    width: 30px;
+    height: 20px; 
+    width: 20px;
+
 }
 
 button{
-    margin: 10px;
-    padding: 5px;
+    margin:20px;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 1.2rem;
+    border-radius: 15px;
+    background-color:#c7072e;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+    cursor:pointer;
 }
+
+button:hover{
+    background-color:#45a049 ;
+}
+
+
 
